testsuite/poke.pkl/printf-diag-19.pk
/* { dg-do compile } */

printf ("%f1d", 1UH); /* { dg-error "" } */
